# lemni

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  CODEOWNERS  CODE_OF_CONDUCT.md  README.md
cmake/: FindARB.cmake  FindSDL2.cmake
edit/: CMakeLists.txt  Widgets.cpp  Widgets.hpp  lay.c  main.cpp
include/lemni/: AInt.h  ARatio.h  AReal.h  Expr.h  Interop.h  Location.h  Macros.h  Module.h  Operator.h  Region.h  Scope.h  Str.h  Token.h  Type.h  TypedExpr.h  Value.h  compile.h  eval.h  lex.h  mangle.h  memcheck.h  parse.h  typecheck.h
lib/: AInt.cpp  AInt.hpp  ARatio.cpp  ARatio.hpp  AReal.cpp  AReal.hpp  CMakeLists.txt  Expr.cpp  Expr.hpp  GCCJIT.hpp  Interop.cpp  LLVM.hpp  Module.cpp  Operator.cpp  Region.cpp  Region.hpp  Scope.cpp  Type.cpp  Type.hpp  TypeList.hpp  TypedExpr.cpp  TypedExpr.hpp  Value.cpp  Value.hpp  compile.cpp  eval.cpp  lex.cpp  mangle.cpp  memcheck.cpp  parse.cpp  typecheck.cpp
repl/: CMakeLists.txt  main.cpp  repl.hpp
testall/: CMakeLists.txt  main.cpp
utils/: createDefMacros.py
